# connector/server/handlers/explore_statistics.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"fmt"
+	"strconv"
 
 	explore_statistics "github.com/ldsec/medco/connector/restapi/server/operations/explore_statistics"
 
@@ -9,7 +10,6 @@ import (
 
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/ldsec/medco/connector/restapi/models"
-	"github.com/ldsec/medco/connector/restapi/server/operations/survival_analysis"
 	referenceintervalserver "github.com/ldsec/medco/connector/server/reference_intervals"
 	"github.com/sirupsen/logrus"
 )
@@ -17,7 +17,7 @@ import (
 // ExploreStatisticsHandler handles /survival-analysis API endpoint
 func ExploreStatisticsHandler(param explore_statistics.ExploreStatisticsParams, principal *models.User) middleware.Responder {
 
-	survivalAnalysisQuery := referenceintervalserver.NewQuery(
+	query, err := referenceintervalserver.NewQuery(
 		principal.ID,
 		param.Body.ID,
 		param.Body.UserPublicKey,
@@ -26,68 +26,77 @@ func ExploreStatisticsHandler(param explore_statistics.ExploreStatisticsParams, 
 		param.Body.Modifier,
 		param.Body.NumberOfBuckets)
 
-	logrus.Debug("survivalAnalysis: ", survivalAnalysisQuery)
-	err := survivalAnalysisQuery.Validate()
 	if err != nil {
 		logrus.Error(err)
-		return survival_analysis.NewSurvivalAnalysisBadRequest().WithPayload(
-			&survival_analysis.SurvivalAnalysisBadRequestBody{
-				Message: "Survival query validation error:" + err.Error()})
+		explore_statistics.NewExploreStatisticsBadRequest().WithPayload(
+			&explore_statistics.ExploreStatisticsBadRequestBody{
+				Message: "Explore statistics query creation error:" + err.Error()})
+
 	}
+
+	logrus.Debug("survivalAnalysis: ", query)
+	err = query.Validate()
+	if err != nil {
+		logrus.Error(err)
+		explore_statistics.NewExploreStatisticsBadRequest().WithPayload(
+			&explore_statistics.ExploreStatisticsBadRequestBody{
+				Message: "Explore statistics query validation error:" + err.Error()})
+
+	}
+
 	found := false
 	logrus.Info("checking cohort's existence")
-	found, err = querytoolsserver.DoesCohortExist(principal.ID, *param.Body.CohortName)
+	found, err = querytoolsserver.DoesCohortExist(principal.ID, param.Body.CohortName)
 	if err != nil {
 		logrus.Error(err)
-		return survival_analysis.NewSurvivalAnalysisDefault(500).WithPayload(
-			&survival_analysis.SurvivalAnalysisDefaultBody{
-				Message: "Survival query execution error:" + err.Error()})
+		explore_statistics.NewExploreStatisticsDefault(500).WithPayload(
+			&explore_statistics.ExploreStatisticsDefaultBody{
+				Message: "Explore statistics query execution error:" + err.Error()})
 	}
 
 	if !found {
 		logrus.Info("cohort not found")
-		return survival_analysis.NewSurvivalAnalysisNotFound().WithPayload(
-			&survival_analysis.SurvivalAnalysisNotFoundBody{
-				Message: fmt.Sprintf("Cohort %s not found", *param.Body.CohortName),
-			},
-		)
+		return explore_statistics.NewExploreStatisticsNotFound().WithPayload(
+			&explore_statistics.ExploreStatisticsNotFoundBody{
+				Message: fmt.Sprintf("Cohort %s not found", param.Body.CohortName)})
 	}
 	logrus.Info("cohort found")
 
-	err = survivalAnalysisQuery.Execute()
+	err = query.Execute()
 
 	if err != nil {
 		logrus.Error(err)
-		return survival_analysis.NewSurvivalAnalysisDefault(500).WithPayload(
-			&survival_analysis.SurvivalAnalysisDefaultBody{
-				Message: "Survival query execution error:" + err.Error()})
-
+		explore_statistics.NewExploreStatisticsDefault(500).WithPayload(
+			&explore_statistics.ExploreStatisticsDefaultBody{
+				Message: "Explore statistics query execution error:" + err.Error()})
 	}
-	results := survivalAnalysisQuery.Result
 
-	resultList := make([]*survival_analysis.SurvivalAnalysisOKBodyResultsItems0, 0)
-	for _, group := range survivalAnalysisQuery.Result.EncEvents {
-
-		timePoints := make([]*survival_analysis.SurvivalAnalysisOKBodyResultsItems0GroupResultsItems0, 0)
-		for _, timePoint := range group.TimePointResults {
-			timePoints = append(timePoints, &survival_analysis.SurvivalAnalysisOKBodyResultsItems0GroupResultsItems0{Timepoint: int64(timePoint.TimePoint),
-				Events: &survival_analysis.SurvivalAnalysisOKBodyResultsItems0GroupResultsItems0Events{
-					Eventofinterest: timePoint.Result.EventValueAgg,
-					Censoringevent:  timePoint.Result.CensoringValueAgg,
-				}})
-		}
-		resultList = append(resultList, &survival_analysis.SurvivalAnalysisOKBodyResultsItems0{
-			GroupID:      group.GroupID,
-			InitialCount: group.EncInitialCount,
-			GroupResults: timePoints,
-		})
-	}
+	results := query.Result
 
 	//parse timers
 	modelsTimers := results.Timers.TimersToAPIModel()
 
-	requestResult := &survival_analysis.SurvivalAnalysisOKBody{Results: resultList, Timers: modelsTimers}
+	apiIntervals := make([]*models.IntervalBucket, len(results.Intervals))
 
-	return survival_analysis.NewSurvivalAnalysisOK().WithPayload(requestResult)
+	for _, bucket := range results.Intervals {
+		higherBound := strconv.FormatFloat(bucket.HigherBound, 'f', 5, 64)
+		lowerBound := strconv.FormatFloat(bucket.LowerBound, 'f', 5, 64)
+
+		apiBucket := models.IntervalBucket{
+			EncCount:    &bucket.EncCount,
+			HigherBound: &higherBound,
+			LowerBound:  &lowerBound,
+		}
+
+		apiIntervals = append(apiIntervals, &apiBucket)
+	}
+
+	requestResult := explore_statistics.ExploreStatisticsOKBody{
+		Intervals: apiIntervals,
+		Unit:      results.Unit,
+		Timers:    modelsTimers,
+	}
+
+	return explore_statistics.NewExploreStatisticsOK().WithPayload(&requestResult)
 
 }
